Fixed spacing on navbar and added new logo

--- a/10b/css/main.css
+++ b/10b/css/main.css
@@ -1,12 +1,12 @@
-#map_canvas{
+#map_canvas {
     width: 100%;
     height: 570px;
 }
-.slide-out-div{
+.slide-out-div {
 	z-index: 1;
 }
 
-.infoWindow{
+.infoWindow {
     float: left;
     top: 2px;
     color: black;
@@ -18,7 +18,7 @@
     align: left;
 }
 
-ul#sidenav{
+ul#sidenav {
 	padding: 0;
 	float: left;
 	left: 20px;
@@ -38,15 +38,14 @@ ul#sidenav{
 	opacity: .85;
 	border-radius: 10px;
 	border: 3px solid black;
-	
 }
 
-#statement{
+#statement {
     position: absolute;
     float: center;
 }
 
-ul#sidenav li a{
+ul#sidenav li a {
     display: block;
     color: #ffffff;
     float: left;
@@ -58,27 +57,27 @@ ul#sidenav li a{
     border-bottom: 1px solid GREY;
 }
 
-ul#sidenav li a:hover{
+ul#sidenav li a:hover {
     background: #000066 /*#074F6E*/;
     border-top: 1px solid #1A4C76;
     opacity: 10%;
 }
 
-ul#sidenav li span{
+ul#sidenav li span {
     display: none;
 }
 
-ul#sidenav li a hover span{
+ul#sidenav li a hover span {
     display: block;
     font-size: 0.8em;
     padding: 10px 0;
 }
 
-a{
+a {
     color: #FFCC00;
 }
 
-a:focus{
+a:focus {
     outline: none;
 }
 
@@ -94,17 +93,33 @@ ul#sidenav li a:hover span {
     width: 100%;
 }
 
+.navbar img {
+    padding: 6px 5px;
+    height: 2.2em;
+}
+
+.navbar input {
+  width: 12em;
+  margin: 1px 2px;
+}
+
 .alert {
     margin: 0;
 }
 
-input,
-textarea,
-.uneditable-input {
-  width: 12em;
+.infoWindow {
+    float: left;
+    top: 2px;
+    color: black;
+    font: normal 11px Arial, sans-serif;
+    font-size: 12px;
+    margin: 2px;
+    text-align: center;
+    border-radius: 10px;
+    align: left;
 }
 
-.footer h6{
+.footer h6 {
     font-family: Helvetica, Arial, Verdana, sans-serif;
     font-size: 12px;
     color: #aaaaaa;
